charts/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth
  namespace: xata
  labels:
    xata.tech/gateway: api
spec:
  parentRefs:
    - name: eg
  hostnames:
    - localhost
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: auth
          port: 5001
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /_hello
        - path:
            type: PathPrefix
            value: /openapi.yaml
        - path:
            type: PathPrefix
            value: /openapi.json
        - path:
            type: PathPrefix
            value: /user
        - path:
            type: PathPrefix
            value: /api-keys
        - path:
            type: PathPrefix
            value: /webhooks/orb
        - path:
            type: PathPrefix
            value: /webhooks/stripe
        - path:
            type: RegularExpression
            value: "^/organizations(/*)$|^/organizations/([^/]+)(/api-keys|/members.*|/invitations.*|/deletion-request|/membership-limits)?$"
